crates/analyzer/tests/snapshots/errors__bad_map.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` expects 2 arguments, but 3 were provided
  ┌─ [snippet]:3:6
  │
3 │   x: Map<u8, u8, u8>
  │      ^^^ --  --  -- supplied 3 arguments
  │      │            
  │      expects 2 arguments

error: invalid variable type
  ┌─ [snippet]:3:6
  │
3 │   x: Map<u8, u8, u8>
  │      ^^^^^^^^^^^^^^^ `Map` type can only be used as a contract field


