crates/analyzer/tests/snapshots/errors__bad_map2.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` value must be a type
  ┌─ [snippet]:3:19
  │
3 │   x: Map<address, 100>
  │                   ^^^ this should be a type name

error: invalid variable type
  ┌─ [snippet]:3:6
  │
3 │   x: Map<address, 100>
  │      ^^^^^^^^^^^^^^^^^ `Map` type can only be used as a contract field


