crates/analyzer/tests/snapshots/errors__bad_map4.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` expects 2 arguments, but 1 was provided
  ┌─ [snippet]:3:6
  │
3 │   x: Map<y>
  │      ^^^ - supplied 1 argument
  │      │    
  │      expects 2 arguments

error: undefined type
  ┌─ [snippet]:3:10
  │
3 │   x: Map<y>
  │          ^ this type name has not been defined

error: invalid variable type
  ┌─ [snippet]:3:6
  │
3 │   x: Map<y>
  │      ^^^^^^ `Map` type can only be used as a contract field


