crates/analyzer/tests/snapshots/errors__duplicate_arg_in_contract_method.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: duplicate parameter names in function `bar`
  ┌─ compile_errors/duplicate_arg_in_contract_method.fe:2:17
  │
2 │     pub def bar(foo: u8, foo:u8):
  │                 ^^^^^^^  ------ second use of the name `foo`
  │                 │         
  │                 first use of the name `foo`


