crates/analyzer/tests/snapshots/errors__duplicate_method_in_contract.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: duplicate function names in `contract Foo`
  ┌─ compile_errors/duplicate_method_in_contract.fe:3:5
  │    
3 │ ╭       pub def bar():
4 │ │           pass
  │ ╰──────────────^ `bar` first defined here
5 │     
6 │   ╭     pub def bar():
7 │   │         pass
  │   ╰────────────' `bar` redefined here


